# format-after-merge

./: pyproject.toml
.github/workflows/: format-after-merge.yml
numcruncher/: numcruncher.py
