[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "numcruncher"
version = "0.1.0"
description = "Numbers cruncher"
requires-python = ">=3.9"
dependencies = [
    "click",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools]
packages = ["numcruncher"]

[project.scripts]
crunch = "numcruncher.numcruncher:main"

